--- a/src/App.css
+++ b/src/App.css
@@ -131,11 +131,11 @@ h1 {
     top: 0;
     left: 0;
     color: #F97316;
-    background: rgba(30, 41, 59, 0.85);
+    background: rgba(30, 41, 59, 0.75);
     z-index: 3;
-    font-weight: 600;
+    font-weight: 800;
     text-transform: uppercase;
-    font-size: 0.8rem;
+    font-size: 0.9rem;
     letter-spacing: 1.2px;
     opacity: 0;
     transition: opacity 0.3s ease;
@@ -213,6 +213,60 @@ h1 {
 .footer {
     color: #64748B;
     font-size: 1.2rem;
+}
+
+.overlay{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.6);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+.modal{
+    background: #1E293B;
+    padding: 2rem;
+    border-radius: 10px;
+    box-shadow: 0 4px 15px rgba(0,0,0,0.5);
+    max-width: 800px;
+    width: 100%;
+    height: 75%;
+    color: #CBD5E1;
+    text-align: center;
+}
+.closeBtn{
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    background: transparent;
+    border: none;
+    font-size: 1.5rem;
+    color: #CBD5E1;
+    cursor: pointer;
+}
+.modalContent{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+}
+.modalContent img{
+    height: auto;
+    width: auto;
+    margin-bottom: 1rem;
+    margin: 2rem;
+}
+.modalDetails{
+    line-height: 1.6;
+    text-align: left;
+}
+.modalDetails h2{
+    margin-bottom: 2rem;
+    color: #F97316;
 }
 
 @media screen and (max-width: 768px) {
